<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LetMeAttend</string>
    <string name="sub_title">Allow me to mark your attendance and keep a track on it! </string>
    <string name="connect_with">\u2014\u2014QUICKLY CONNECT WITH\u2014\u2014</string>
    <string name="google_login">Continue with Google</string>
    <string name="email_login">Continue with Email</string>
    <string name="skip_sign_in">\u2014\u2014OR SIGN IN WITH PHONE NUMBER\u2014\u2014</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="attendance_criteria">Set Attendance Criteria</string>
    <string name="dialog_subject">Subject:</string>
    <string name="dialog_From">From:</string>
    <string name="dialog_to">To:</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_select_time">SELECT START TIME</string>
    <string name="dialog_select_date">SELECT END TIME</string>
    <string name="dialog_select_color">Select Color</string>
    <string name="dialog_title">Add Subject</string>
    <string name="edit_text_error">Field can\'t be empty</string>
    <string name="time_error">Time field can\'t be empty</string>
    <string name="choose_time">Choose Time</string>
    <string name="channel_name">MyChannel</string>
    <string name="channel_description">MyNotif</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="no_class">CANCELED</string>
    <string name="add_attendance">Attendance Criteria In Your College (%)</string>
    <string name="day_name">Monday</string>
    <string name="are_you_attending">Are you attending</string>
    <string name="logout">Logout</string>
    <string name="your_subjects">Your Courses</string>
    <string name="lectures_today">Lectures Today</string>
    <string name="TimeTable">TimeTable</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="course_name">Name</string>
    <string name="choose_color">Choose color</string>
    <string name="add_course">Add Course</string>
    <string name="select">Select</string>
    <string name="edit_course">Edit Course</string>
    <string name="add_lectures">Add Lectures</string>
    <string name="day">Select day</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="physics">Physics</string>
    <string name="delete">Delete</string>
    <string name="edit_lecture">Edit lecture</string>
    <string name="no_today">No lectures found for today</string>
    <string name="delete_confirmation">Deleting the course will delete all the lectures and their attendance records</string>



    <!-- Copied from colorpickerlibrary -->
    <array name="colors">
        <item>#3F51B5</item>
        <item>#303F9F</item>
        <item>#FF4081</item>
    </array>


</resources>
