<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:layout_weight="0.3"
                style="@style/DialogText"

                />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/day_name"
                android:layout_weight="0.7"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/day_tv"
                android:onClick="onClick"
                android:textColor="@color/colorAccent"
                style="@style/DialogText"

                />


    </LinearLayout>




    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_From"
                android:layout_weight="0.3"
                style="@style/DialogText"

                />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_select_time"
                android:layout_weight="0.7"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/start_time"
                android:onClick="onClick"
                android:textColor="@color/colorAccent"
                style="@style/DialogText"

                />


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_to"
                android:layout_weight="0.3"
                style="@style/DialogText"

                />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_select_date"
                android:layout_weight="0.7"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/end_time"
                android:onClick="onClick"
                android:textColor="@color/colorAccent"
                style="@style/DialogText" />


    </LinearLayout>




</LinearLayout>