<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="vm"
                type="com.attendance.letmeattend.viewmodels.EnterDetailsViewModel" />
    </data>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_subject"
                    android:layout_weight="0.3"
                    style="@style/DialogText"


                    />

            <AutoCompleteTextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    style="@style/DialogEditText"
                    android:id="@+id/subject"
                    android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_From"
                    android:layout_weight="0.3"
                    style="@style/DialogText"

                    />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_select_time"
                    android:layout_weight="0.7"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:id="@+id/start_time"
                    android:onClick="onClick"
                    android:textColor="@color/colorAccent"
                    style="@style/DialogText"

                    />


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_to"
                    android:layout_weight="0.3"
                    style="@style/DialogText"

                    />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_select_date"
                    android:layout_weight="0.7"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:id="@+id/end_time"
                    android:onClick="onClick"
                    android:textColor="@color/colorAccent"
                    style="@style/DialogText" />


        </LinearLayout>

        <com.attendance.letmeattend.colorseekbar.ColorSeekBar
                android:id="@+id/colorSlider"
                android:layout_width="match_parent"
                app:colorSeeds="@array/material_colors"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                app:barRadius="20dp"

                android:layout_margin="10dp" />

        <!--   <Button android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:layout_gravity="center"
                   android:text="@string/dialog_select_color"
                   android:layout_margin="10dp"
                   android:padding="20dp"
                   android:id="@+id/color_btn"
                   android:onClick="onClick"

           />

           -->

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

            <Button
                    android:text="@string/dialog_cancel"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancel"
                    android:background="@color/fui_transparent" />

            <Button
                    android:text="@string/save"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/save"
                    android:background="@color/fui_transparent" />

        </LinearLayout>


    </LinearLayout>
</layout>