<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/windowBackground"



>


   <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
   android:orientation="vertical"
                 android:gravity="center"

   android:weightSum="6">



      <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:orientation="vertical"
                    android:layout_gravity="center"
      android:layout_weight="1">

   <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
             style="@style/LoginTitle"
   android:layout_gravity="center"

   android:gravity="center"/>


   <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:text="@string/sub_title" android:textAppearance="@style/Sub_Title"

             android:layout_gravity="center" android:gravity="center"
   />

      </LinearLayout>


      <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:weightSum="6"
                    android:orientation="vertical"
                   >

      <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:text="@string/connect_with"
                android:textAppearance="@style/ConnectWith"
                  android:gravity="center"
                android:layout_weight="1"
      />
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
         android:orientation="vertical"

                       android:gravity="center"
                       android:layout_weight="4"
         >

         <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:background="@drawable/google_login_button_background"
                 android:text="@string/google_login"
                 android:drawableLeft="@drawable/google"
                 android:onClick="onClick"
                 android:drawableStart="@drawable/google"
                 android:id="@+id/google_btn"
                 style="@style/LoginButtons"
         />
         <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:background="@drawable/email_login_button_background"
                 android:text="@string/email_login"
                 android:id="@+id/email_btn"
                 android:onClick="onClick"
                 android:drawableStart="@drawable/ic_email_black_24dp"
                 android:drawableLeft="@drawable/ic_email_black_24dp"
                 style="@style/LoginButtons"

         />

         </LinearLayout>

         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/skip_sign_in"
                   android:textAppearance="@style/ConnectWith"
                   android:gravity="center"
                   android:layout_weight="1"
         />


      </LinearLayout>


      <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="Skip Sign In"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClick"
                android:id="@+id/skin_signin_textview"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"


      />


   </LinearLayout>






</LinearLayout>