<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="vm"
                type="com.attendance.letmeattend.activities.details.DetailsViewModel" />
    </data>


<androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:id="@+id/frame"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:elevation="0dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                android:background="@color/colorPrimary">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                android:orientation="horizontal">


            <TextView
                    android:id="@+id/day_tv"
                    style="@style/LoginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.getDay}"
                    android:textSize="40sp"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                   android:layout_alignParentLeft="true"
                    />

            <com.nightonke.boommenu.BoomMenuButton
                    android:id="@+id/bmb"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:bmb_buttonEnum="ham"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    app:bmb_buttonPlaceEnum="buttonPlace_ham_1"
                    app:bmb_piecePlaceEnum="piecePlace_ham_1"
                    app:setBuilders="@{vm}" />
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

        <TextView
                android:id="@+id/textView"
                style="@string/sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/add_attendance"
                android:textSize="@dimen/title_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

        <com.ramotion.fluidslider.FluidSlider
                android:id="@+id/fluidSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:bar_color="@color/colorPrimary"
                app:bubble_color="@color/colorAccent"
                app:bubble_text_color="@color/textColorPrimary"
                app:initial_position="0.75"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:setPosition="@{vm.attendanceCriteriaLiveData}"
                app:size="normal"
                app:updateValue="@{vm}"
                tools:ignore="MissingConstraints" />


        <LinearLayout
                android:id="@+id/save_attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fluidSlider">

            <Button

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:onClick="@{() -> vm.updateAttendanceCriteriaMethod()}"
                    android:padding="@dimen/button_padding"
                    android:text="@string/save" />
        </LinearLayout>


        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/save_attendance"
                app:layout_constraintTop_toBottomOf="@+id/fluidSlider"
                app:setVisibility="@{vm.progressVisibility}" />


        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:text="@string/your_subjects"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_attendance" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                adapter="@{vm.subjectRecyclerAdapter}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
                app:setupSubjectAdapter="@{vm.subjectRecyclerAdapter}"
                app:subjects="@{vm.subjectsLiveData}" />

        <LinearLayout
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_attendance">

            <com.google.android.material.floatingactionbutton.FloatingActionButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@color/colorAccent"
                    android:clickable="true"
                    android:src="@drawable/ic_add_black_24dp"

                    />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView">

            <Button

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:onClick="@{()->vm.showTimetable()}"
                    android:padding="@dimen/button_padding"
                    android:text="@string/TimeTable" />
        </LinearLayout>

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/lectures_today"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView2"
                adapter="@{vm.lectureRecyclerAdapter}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:nestedScrollingEnabled="false"
                app:lectures="@{vm.lecturesLiveData}"
                app:setupLectureAdapter="@{vm.lectureRecyclerAdapter}">

        </androidx.recyclerview.widget.RecyclerView>

        <FrameLayout
                android:id="@+id/container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>